src/test/deca/syntax/valid/escape-char.deca
// Description:
//    Test des caractères spéciaux
//
// Resultats:
//    \"
//
// Historique:
//    cree le 01/01/2024

{
    println("\\","\"");
}
